# curl-android-ios

CURL_Android_Demo/: settings.gradle
CURL_Android_Demo/app/: CMakeLists.txt  build.gradle
CURL_Android_Demo/app/libs/: moxie-curl-1.0.aar
CURL_Android_Demo/app/src/main/: AndroidManifest.xml
CURL_Android_Demo/app/src/main/cpp/: lchttp.cpp  mxcurl.cpp  mxerror.cpp
CURL_Android_Demo/app/src/main/cpp/include/: lchttp.h  mxcurl.h  mxerror.h
CURL_Android_Demo/app/src/main/java/com/bbbond/curl_android_demo/: MainActivity.java
CURL_Android_Demo/app/src/main/java/com/bbbond/curl_android_demo/mxcurl/: Header.java  Params.java  Request.java  Response.java  ResponseBody.java
CURL_Android_Demo/app/src/main/java/com/bbbond/curl_android_demo/mxcurl/internal/: CurlUtils.java
CURL_Android_Demo/app/src/main/java/com/bbbond/curl_android_demo/utils/: CurlUtils.java
CURL_Android_Demo/app/src/main/res/layout/: activity_main.xml
CURL_Android_Demo/app/src/main/res/values/: strings.xml
CURL_Android_Demo/gradle/wrapper/: gradle-wrapper.properties
CURL_Android_Demo/mxcurllib/: CMakeLists.txt  build.gradle  proguard-rules.pro
CURL_Android_Demo/mxcurllib/src/main/: AndroidManifest.xml
CURL_Android_Demo/mxcurllib/src/main/cpp/: mxcurl.cpp
CURL_Android_Demo/mxcurllib/src/main/cpp/include/: mxcurl.h
CURL_Android_Demo/mxcurllib/src/main/java/com/bbbond/mxcurllib/: Constant.java  Curl.java  CurlCode.java  CurlConstant.java  CurlException.java  CurlFormCode.java  CurlHttp.java  CurlOpt.java  CurlResponse.java
CURL_Android_Demo/mxcurllib/src/main/java/com/bbbond/mxcurllib/cache/: Cache.java  (+2 more)
CURL_Android_Demo/mxcurllib/src/main/res/values/: strings.xml
(+5 files in other folders)
